# SandSimulator

./: .gitignore  CMakeLists.txt  Projetc Proposal.docx  README.md  imgui.ini  prese.pptx  s.qea
src/: DensityMapRenderer.cpp  DensityMapRenderer.h  FluidSimulation.cpp  FluidSimulation.h  InteractionHandler.cpp  InteractionHandler.h  Particle.cpp  Particle.h  ParticleRenderer.cpp  ParticleRenderer.h  Renderer.cpp  Renderer.h  SPHKernels.cpp  SPHKernels.h  UIControls.cpp  UIControls.h  Vec2.h  main.cpp
